<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView1" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<ImageView android:src="@drawable/about_tr"  
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:padding="2.5dip"/>
	<TextView android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/TextView01" 
		android:text="@string/about_pitch"
		android:padding="2.5dip"/>
	<ImageView android:src="@drawable/how_to"  
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:padding="2.5dip"/>	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="horizontal">
		<ImageView android:src="@drawable/capturestart"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="2.5dip"/>
		<TextView android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/TextView01" 
		android:text="@string/start_text"
		android:padding="2.5dip"/>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="horizontal">
		<ImageView android:src="@drawable/archive_ss"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="2.5dip"/>
		<TextView android:text="@string/explore_capture1" 
			android:id="@+id/TextView01" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:padding="2.5dip"/>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="horizontal">
		<ImageView android:src="@drawable/map_ss"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="2.5dip"/>
		<TextView android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/TextView01" 
		android:text="@string/explore_capture2"
		android:paddingLeft="2.5dip"
		android:paddingRight="2.5dip"
		android:paddingTop="2.5dip"/>
	</LinearLayout>
	<TextView android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/TextView01" 
		android:text="@string/explore_capture2.5"
		android:paddingLeft="2.5dip"
		android:paddingRight="2.5dip"
		android:paddingBottom="2.5dip"/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="horizontal">
		<ImageView android:src="@drawable/time_list_ss"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="2.5dip"/>
		<TextView android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:text="@string/explore_capture5"
			android:padding="2.5dip"/>
	</LinearLayout>	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="horizontal">
		<ImageView android:src="@drawable/loc_pop_up_ss"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="2.5dip"/>
		<TextView android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:text="@string/explore_capture3"
			android:padding="2.5dip"/>
	</LinearLayout>	
	<ImageView android:src="@drawable/loc_page_ss"  
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="2.5dip"/>
	<TextView android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:layout_gravity="center"
			android:text="@string/explore_capture4"
			android:padding="2.5dip"/>		
	<TextView android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:layout_gravity="center"
			android:text="@string/now_go"
			android:textSize="16sp"
			android:paddingTop="5dip"
			/>
</LinearLayout>
</ScrollView>